--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Multiplication Table",
   "short_name": "Multiplication",
   "description": "A simple multiplication game for learning.",
+  "version": "1.0.0",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
