--- a/docs/config.json
+++ b/docs/config.json
@@ -1,6 +1,6 @@
 {
   "MULTIPLICATION_MIN": 6,
-  "MULTIPLICATION_MAX": 9,
+  "MULTIPLICATION_MAX": 7,
   "ADDITION_MIN": 1,
   "ADDITION_MAX": 10,
   "SUBTRACTION_MIN": 1,
@@ -12,5 +12,47 @@
     "MATH_TYPE_STANDARD": 300,
     "MATH_TYPE_LEFT": 1,
     "MATH_TYPE_RIGHT": 1
-  }
+  },
+  "FIXED_QUESTIONS": [
+    {"type": "multiplication", "a": 6, "b": 1, "op": "x", "res": 6},
+    {"type": "multiplication", "a": 6, "b": 2, "op": "x", "res": 12},
+    {"type": "multiplication", "a": 6, "b": 3, "op": "x", "res": 18},
+    {"type": "multiplication", "a": 6, "b": 4, "op": "x", "res": 24},
+    {"type": "multiplication", "a": 6, "b": 5, "op": "x", "res": 30},
+    {"type": "multiplication", "a": 6, "b": 6, "op": "x", "res": 36},
+    {"type": "multiplication", "a": 6, "b": 7, "op": "x", "res": 42},
+    {"type": "multiplication", "a": 6, "b": 8, "op": "x", "res": 48},
+    {"type": "multiplication", "a": 6, "b": 9, "op": "x", "res": 54},
+    {"type": "multiplication", "a": 6, "b": 10, "op": "x", "res": 60},
+    {"type": "multiplication", "a": 7, "b": 1, "op": "x", "res": 7},
+    {"type": "multiplication", "a": 7, "b": 2, "op": "x", "res": 14},
+    {"type": "multiplication", "a": 7, "b": 3, "op": "x", "res": 21},
+    {"type": "multiplication", "a": 7, "b": 4, "op": "x", "res": 28},
+    {"type": "multiplication", "a": 7, "b": 5, "op": "x", "res": 35},
+    {"type": "multiplication", "a": 7, "b": 6, "op": "x", "res": 42},
+    {"type": "multiplication", "a": 7, "b": 7, "op": "x", "res": 49},
+    {"type": "multiplication", "a": 7, "b": 8, "op": "x", "res": 56},
+    {"type": "multiplication", "a": 7, "b": 9, "op": "x", "res": 63},
+    {"type": "multiplication", "a": 7, "b": 10, "op": "x", "res": 70},
+    {"type": "multiplication", "a": 8, "b": 1, "op": "x", "res": 8},
+    {"type": "multiplication", "a": 8, "b": 2, "op": "x", "res": 16},
+    {"type": "multiplication", "a": 8, "b": 3, "op": "x", "res": 24},
+    {"type": "multiplication", "a": 8, "b": 4, "op": "x", "res": 32},
+    {"type": "multiplication", "a": 8, "b": 5, "op": "x", "res": 40},
+    {"type": "multiplication", "a": 8, "b": 6, "op": "x", "res": 48},
+    {"type": "multiplication", "a": 8, "b": 7, "op": "x", "res": 56},
+    {"type": "multiplication", "a": 8, "b": 8, "op": "x", "res": 64},
+    {"type": "multiplication", "a": 8, "b": 9, "op": "x", "res": 72},
+    {"type": "multiplication", "a": 8, "b": 10, "op": "x", "res": 80},
+    {"type": "multiplication", "a": 9, "b": 1, "op": "x", "res": 9},
+    {"type": "multiplication", "a": 9, "b": 2, "op": "x", "res": 18},
+    {"type": "multiplication", "a": 9, "b": 3, "op": "x", "res": 27},
+    {"type": "multiplication", "a": 9, "b": 4, "op": "x", "res": 36},
+    {"type": "multiplication", "a": 9, "b": 5, "op": "x", "res": 45},
+    {"type": "multiplication", "a": 9, "b": 6, "op": "x", "res": 54},
+    {"type": "multiplication", "a": 9, "b": 7, "op": "x", "res": 63},
+    {"type": "multiplication", "a": 9, "b": 8, "op": "x", "res": 72},
+    {"type": "multiplication", "a": 9, "b": 9, "op": "x", "res": 81},
+    {"type": "multiplication", "a": 9, "b": 10, "op": "x", "res": 90}
+  ]
 }
