--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,7 +2,7 @@
   "name": "Multiplication Table",
   "short_name": "Multiplication",
   "description": "A simple multiplication game for learning.",
-  "version": "1.0.7",
+  "version": "1.0._",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
